--- a/package.json
+++ b/package.json
@@ -5,27 +5,46 @@
   "author": "Boelroy",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.3.15",
+    "autoprefixer-loader": "^3.1.0",
+    "babel-core": "^6.7.2",
+    "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
-    "babel-plugin-transform-object-rest-spread": "^6.3.13",
-    "babel-preset-es2015": "^6.1.18",
-    "babelify": "^7.2.0",
-    "chai": "^3.5.0",
+    "babel-polyfill": "^6.7.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.7.2",
     "css-loader": "^0.23.1",
-    "del": "^2.2.0",
-    "glob": "^6.0.1",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-if": "^2.0.0",
-    "gulp-util": "^3.0.7",
-    "mocha": "^2.4.5",
-    "require-dir": "^0.3.0",
-    "run-sequence": "^1.1.5",
-    "style-loader": "^0.13.1",
-    "watchify": "^3.6.1",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-stream": "^3.1.0"
+    "eslint": "^2.4.0",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.1",
+    "eslint-plugin-jsx-a11y": "^1.2.3",
+    "eslint-plugin-react": "^5.1.1",
+    "expect": "^1.12.2",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "fastclick": "^1.0.6",
+    "isomorphic-fetch": "^2.1.1",
+    "js-cookie": "^2.0.4",
+    "jsx-loader": "^0.13.2",
+    "lodash": "^4.6.1",
+    "mocha": "^2.3.3",
+    "mock-local-storage": "^1.0.2",
+    "moment": "^2.10.6",
+    "nock": "^8.0.0",
+    "node-sass": "^3.3.3",
+    "normalizr": "^2.0.0",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-hot-loader": "^1.3.0",
+    "react-motion": "^0.4.2",
+    "react-redux": "^4.4.1",
+    "redux": "^3.0.0",
+    "redux-thunk": "^2.0.1",
+    "sass-loader": "^3.2.0",
+    "soundcloud": "^3.0.1",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.11.0"
   },
   "dependencies": {
   }
