--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "vue-backend-generator",
+  "name": "start-kit",
   "version": "1.0.0",
   "description": "",
   "author": "Boelroy",
   "license": "MIT",
+  "scripts": {
+    "build": "NODE_ENV=production webpack -p --config ./webpack.prod.config.js",
+    "start": "webpack-dev-server --colors --hot --inline --history-api-fallback --content-base ./app/ --config ./webpack.config.js",
+    "prebuild": "rm -rf build"
+  },
   "devDependencies": {
+    "antd": "^1.6.4",
     "autoprefixer-loader": "^3.1.0",
     "babel-core": "^6.7.2",
     "babel-eslint": "^6.0.4",
@@ -23,9 +29,14 @@
     "expect": "^1.12.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "fastclick": "^1.0.6",
+    "gulp-imagemin": "^3.0.1",
+    "gutil": "^1.6.4",
+    "html-webpack-plugin": "^2.22.0",
     "isomorphic-fetch": "^2.1.1",
     "js-cookie": "^2.0.4",
     "jsx-loader": "^0.13.2",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "lodash": "^4.6.1",
     "mocha": "^2.3.3",
     "mock-local-storage": "^1.0.2",
@@ -47,5 +58,6 @@
     "webpack-dev-server": "^1.11.0"
   },
   "dependencies": {
+    "react-router-redux": "^4.0.5"
   }
 }
